[FIX] fixed workflows, added missing crates fo publishing

--- a/.github/workflows/crates-publish.yml
+++ b/.github/workflows/crates-publish.yml
@@ -12,7 +12,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  # Publish gldf-rs (core library) first
+  # Publish gldf-rs (core library) first - all other crates depend on it
   publish-lib:
     name: Publish gldf-rs
     runs-on: ubuntu-latest
@@ -35,6 +35,64 @@ jobs:
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         run: cargo publish -p gldf-rs --allow-dirty
+
+  # Publish gldf-rs-ffi (FFI bindings for mobile) after gldf-rs
+  publish-ffi:
+    name: Publish gldf-rs-ffi
+    runs-on: ubuntu-latest
+    needs: publish-lib
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Wait for crates.io index update
+        run: sleep 30
+
+      - name: Update crates.io index
+        run: cargo update -p gldf-rs
+
+      - name: Verify build
+        run: cargo build --release -p gldf-rs-ffi
+
+      - name: Dry run publish
+        run: cargo publish --dry-run -p gldf-rs-ffi
+
+      - name: Publish gldf-rs-ffi to crates.io
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        run: cargo publish -p gldf-rs-ffi --allow-dirty
+
+  # Publish gldf-rs-wasm (WebAssembly viewer) after gldf-rs
+  publish-wasm:
+    name: Publish gldf-rs-wasm
+    runs-on: ubuntu-latest
+    needs: publish-lib
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: wasm32-unknown-unknown
+
+      - name: Wait for crates.io index update
+        run: sleep 30
+
+      - name: Update crates.io index
+        run: cargo update -p gldf-rs
+
+      - name: Verify build
+        run: cargo build --release -p gldf-rs-wasm --target wasm32-unknown-unknown
+
+      - name: Dry run publish
+        run: cargo publish --dry-run -p gldf-rs-wasm
+
+      - name: Publish gldf-rs-wasm to crates.io
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        run: cargo publish -p gldf-rs-wasm --allow-dirty
 
   # Publish gldf-rs-egui (desktop viewer) after gldf-rs
   publish-egui:
