[ADD] added ldt import for the gldf-rs-lib, quite less information is available this way, but a start is a start

--- a/crates/gldf-rs-wasm/Cargo.toml
+++ b/crates/gldf-rs-wasm/Cargo.toml
@@ -18,8 +18,8 @@ name = "gldf_rs_wasm"
 path = "src/main.rs"
 
 [dependencies]
-# Core library
-gldf-rs.workspace = true
+# Core library - enable eulumdat feature for LDT/IES to GLDF conversion
+gldf-rs = { workspace = true, features = ["eulumdat"] }
 
 # Error handling
 anyhow.workspace = true
