--- a/crates/gldf-rs-lib/Cargo.toml
+++ b/crates/gldf-rs-lib/Cargo.toml
@@ -18,6 +18,7 @@ crate-type = ["cdylib", "rlib"]
 [features]
 default = ["http"]
 http = ["dep:reqwest", "dep:tokio", "dep:async-std"]
+eulumdat = ["dep:eulumdat"]
 
 [dependencies]
 # Serialization
@@ -40,3 +41,6 @@ tokio = { workspace = true, optional = true }
 
 # HTTP client (optional)
 reqwest = { workspace = true, optional = true }
+
+# Photometry parsing (optional)
+eulumdat = { workspace = true, optional = true }
