[RELEASE] v0.3.3 - LDT/IES conversion, WASM improvements, CI fixes
  ## Python Bindings
  - Add ldt_to_gldf_json() and ldt_to_gldf_bytes() for LDT/IES to GLDF conversion
  - Add gldf_from_bytes() to load GLDF from bytes
  - Add gldf_json_to_bytes() to export GLDF JSON to bytes
  - Enable eulumdat feature for photometry conversion support
  - Improve error handling with proper PyValueError exceptions

  ## WASM Viewer
  - Add Clear and Help buttons to toolbar
  - Add context-sensitive help overlay
  - Add photometry editor with dual-value display (GLDF blue / calculated orange)
  - Add LDT diagram tabs (Polar, Cartesian, Heatmap, 3D Butterfly, BUG, LCS)
  - Add click-to-zoom modal for diagram inspection
  - Add readonly mounting badges in variants view mode
  - Make light-convert dependency optional (hidden feature)

  ## CI/Build
  - Update test-ci-locally.sh to exclude external path deps from fmt/clippy
  - Add MIT-0 and CC0-1.0 to allowed licenses in deny.toml
  - Fix wasm-opt compatibility with homebrew binaryen path
  - Handle pytest exit code 5 (no tests) as success

  ## Fixes
  - Fix SVG overlap in LDT viewer
  - Fix file ID matching for photometry references
  - Fix clippy warnings across all crates
  - Fix rustdoc broken intra-doc links in validation.rs
  - Fix deprecated web_sys::BlobPropertyBag::type_() usage

  ## Documentation
  - Add CHANGELOG.md
  - Update README.md with v0.3.3 features
  - Update Python README with new API reference and examples

--- a/crates/gldf-rs-python/Cargo.toml
+++ b/crates/gldf-rs-python/Cargo.toml
@@ -19,8 +19,8 @@ crate-type = ["cdylib", "rlib"]
 extension-module = ["pyo3/extension-module"]
 
 [dependencies]
-# Core library
-gldf-rs.workspace = true
+# Core library with eulumdat support for LDT/IES conversion
+gldf-rs = { workspace = true, features = ["eulumdat"] }
 
 # Python bindings
 pyo3.workspace = true
