[FIX] fix for consitent versioning and using the crate versions

--- a/deny.toml
+++ b/deny.toml
@@ -54,7 +54,8 @@ db-urls = ["https://github.com/rustsec/advisory-db"]
 # Ignore specific advisories (use with caution)
 # Format: "RUSTSEC-YYYY-NNNN"
 ignore = [
-  # Example: "RUSTSEC-2020-0001",
+  # proc-macro-error is unmaintained but still widely used by many crates
+  "RUSTSEC-2024-0370",
 ]
 
 # ============================================================================
