Add Star Sky viewer components
- Add gldf-starsky-wasm crate for 2D star visualization
- Add StarSkyViewer component using Bevy 3D engine
- Add astral_sky demo page and sample GLDF
- Star data from Lüdinghausen, Germany

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "crates/gldf-rs-lib",
     "crates/gldf-rs-python",
     "crates/gldf-rs-wasm",
+    "crates/gldf-starsky-wasm",
 ]
 
 [workspace.package]
